...
        switch self {
        case .requestTimeLabel:
            return "git.api.request.time.label"
        case .loadingIndicator:
            return "git.api.loading.indicator"
        case .gotoHistoryBtn:
            return "git.api.goto.history.btn"
        case .saveResponseBtn:
            return "git.api.save.response.btn"
        case .responseTextView:
            return "git.api.response.text.view"
        }
    }
}

class GithubAPIRequestViewModel {
    private var receiptArray: [RequestReceipt] = []
...
