...
enum HistoryViewItem {
    case tableView
    
    func accessbilityID() -> String {
        switch self {
        case .tableView:
            return "git.api.history.tableview"
        }
    }
}

class HistroyViewModel: NSObject {
    private(set) var githubAPIs: [GithubAPI] = []
...
